--- a/Ghidra/Framework/Docking/data/docking.theme.properties
+++ b/Ghidra/Framework/Docking/data/docking.theme.properties
@@ -1,6 +1,8 @@
 [Defaults]
 
-
+color.bg.statusbar = color.bg
+color.bg.toolbar = color.bg
+color.bg.menubar = color.bg
 color.bg.splashscreen = black // always black; no palette
 color.fg.splashscreen = gray  // always gray; no palette
 
