worked on scroll bars and icons

--- a/Ghidra/Framework/Docking/data/docking.theme.properties
+++ b/Ghidra/Framework/Docking/data/docking.theme.properties
@@ -12,6 +12,9 @@ color.fg.header.active = [color]system.color.fg.selected.view
 color.fg.header.inactive = color.palette.black
 color.header.drag.cursor = color.palette.black
 
+color.scrollbar.thumb = color.fg
+color.scrollbar.track = color.bg
+
 color.fg.dialog.status.alert = color.fg.messages.alert
 color.fg.dialog.status.error = color.fg.messages.error
 color.fg.dialog.status.normal = color.fg.messages.normal
