--- a/Ghidra/Framework/Docking/data/docking.theme.properties
+++ b/Ghidra/Framework/Docking/data/docking.theme.properties
@@ -66,8 +66,8 @@ icon.toggle.collapse = collapse.gif
 
 // the oxygen-edit-redo.png image is not centered vertically in its 16x16 icon. To center it we
 // create an empty 16x16 base and then move down by 3 pixels
-icon.undo = EMPTY_ICON{oxygen-edit-redo.png[mirror][move(0,3)]}
-icon.redo = EMPTY_ICON{oxygen-edit-redo.png[move(0,3)]}
+icon.undo = modern_undo.png
+icon.redo = modern_redo.png
 
 icon.font = text_lowercase.png
 icon.rename = textfield_rename.png
